# bpaz-shadowbar

./: README.md  RUN_TESTS.md  ShadowBar_Employee_Guide.md  pyproject.toml
content/: index.md  quickstart.md
content/cli/: auth.md  index.md
content/concepts/: agent.md  events.md  tools.md  trust.md
content/examples/: browser_agent.md  email_agent.md
content/integrations/: anthropic.md  microsoft.md
content/reference/: api.md
content/stylesheets/: extra.css
docs/: package-lock.json  package.json
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/[...slug]/: page.tsx
docs/app/roadmap/: page.tsx
docs/components/layout/: DocFooter.tsx  DocNavigation.tsx  Sidebar.tsx  TableOfContents.tsx
docs/components/ui/: CallToAction.tsx  ComparisonView.tsx  SearchDialog.tsx  StepGuide.tsx  TerminalBlock.tsx
docs/content/: roadmap.md
docs/content/connect/: links.md
docs/content/core-concepts/: agent.md  events.md  llm-function.md  logging.md  models.md  plugins.md  system-prompts.md  tools.md  trust.md
docs/content/debug/: interactive.md  logging.md  screenshots.md  xray.md
docs/content/examples/: browser-automation.md  calculator.md  web-research.md
docs/lib/: docs.ts  navigation.ts
shadowbar/: __init__.py  address.py  agent.py  announce.py  auto_debug_exception.py  connect.py  console.py  debugger_ui.py  decorators.py  events.py  interactive_debugger.py  llm.py  llm_do.py  logger.py  prompts.py  relay.py  relay_server.py  tool_executor.py  tool_factory.py  tool_registry.py  trust.py  trust_agents.py  trust_functions.py  usage.py  xray.py
shadowbar/cli/: __init__.py  docs.md  main.py
shadowbar/debug_agent/: __init__.py  agent.py  runtime_inspector.py
shadowbar/debug_explainer/: __init__.py  explain_agent.py  explain_context.py  explainer_prompt.md  root_cause_analysis_prompt.md
shadowbar/execution_analyzer/: __init__.py  execution_analysis.py  execution_analysis_prompt.md
shadowbar/prompt_files/: __init__.py  analyze_contact.md  eval_expected.md  react_evaluate.md  react_plan.md  reflect.md
shadowbar/tui/: __init__.py  divider.py  dropdown.py  footer.py  fuzzy.py  input.py  keys.py  pick.py  providers.py  status_bar.py
shadowbar/useful_events_handlers/: __init__.py  reflect.py
shadowbar/useful_plugins/: __init__.py  calendar_plugin.py  eval.py  image_result_formatter.py  re_act.py  shell_approval.py
shadowbar/useful_tools/: __init__.py  browser.py  diff_writer.py  memory.py  microsoft_calendar.py  outlook.py  shell.py  slash_command.py  terminal.py  todo_list.py  web_fetch.py
tested-docs/: RELAY_INTEGRATION_TEST_REPORT.md  TESTING_DOCUMENTATION.md  TESTING_GUIDE.md  TEST_FAILURES_GUIDE.md  test_all_features.md
tested-files/: test_agent.py  test_all_features.py  test_browser_agent.py  test_installation.py  test_realtime.py  test_relay_integration.py
(+46 files in other folders)
